dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=elementsd.1
endif

if ENABLE_QT
#TODO(stevenroose) uncomment and fix
#  dist_man1_MANS+=elements-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=elements-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=elements-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=elements-wallet.1
endif
endif
